# xkcs

./: Cargo.toml  LICENSE  README.md
data/: comics.json  document  document.json  main.rs  test.json
src/: comic.rs  main.rs  search.rs  table.rs  utils.rs
