[package]
name = "xkcd_index"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
futures = "0.3"
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
bincode = "1.3.3"
crossterm = "0.27.0"
gxhash = "3.1.0"
